<?xml version="1.0" encoding="utf-8"?>
<com.soft.happy.sdkwelfare.main.widget.InterceptLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_white_default_day"
    android:orientation="vertical" >

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        <FrameLayout
                android:id="@+id/area_show_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
        </FrameLayout>

    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/tv_btn1"
                style="@style/main_tab_btn_style"
                android:text="@string/main_bottom_title_1" />

        <TextView
                android:id="@+id/tv_btn2"
                style="@style/main_tab_btn_style"
                android:text="@string/main_bottom_title_2" />

        <TextView
                android:id="@+id/tv_btn3"
                style="@style/main_tab_btn_style"
                android:text="@string/main_bottom_title_3" />

    </LinearLayout>


</com.soft.happy.sdkwelfare.main.widget.InterceptLinearLayout>