<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_white_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_gravity="center"
        android:background="@color/bg_common_red_color" >

        <TextView
            style="@style/head_tv_style"
            android:text="@string/app_name"
            android:textColor="@color/white" >
        </TextView>

        <ImageButton
            android:id="@+id/iv_search"
            android:layout_width="@dimen/height_top_bar"
            android:layout_height="@dimen/height_top_bar"
            android:background="@color/transparent"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_top_bar"
            android:layout_gravity="center_vertical|right"
            android:gravity="center_vertical|right"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <ImageView
                android:id="@+id/iv_title_head_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_head_user" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" >

                <ImageView
                    android:id="@+id/iv_title_head_buy"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_head_buy" />

                <TextView
                    android:id="@+id/tv_show_buy_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/corners_number"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    android:visibility="gone" />
            </FrameLayout>

            <ImageView
                android:id="@+id/iv_new"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_head_new" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_common_title_color"
        android:paddingLeft="4dp"
        android:paddingRight="4dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_btn1"
                style="@style/main_tab_btn_style"
                android:text="@string/main_bottom_title_1" />

            <TextView
                android:id="@+id/tv_btn2"
                style="@style/main_tab_btn_style"
                android:layout_weight="1.3"
                android:text="@string/main_bottom_title_2" />

            <TextView
                android:id="@+id/tv_btn3"
                style="@style/main_tab_btn_style"
                android:layout_weight="1.3"
                android:text="@string/main_bottom_title_3" />

            <TextView
                android:id="@+id/tv_btn4"
                style="@style/main_tab_btn_style"
                android:text="@string/main_bottom_title_4" />

            <TextView
                android:id="@+id/tv_btn5"
                style="@style/main_tab_btn_style"
                android:text="@string/main_bottom_title_5"
                android:visibility="gone" />
        </LinearLayout>

        <View
            style="@style/divider_horizontal_style"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:gravity="bottom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="1dp"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_select_title_triangle" />

            <ImageView
                android:id="@+id/iv_btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:src="@drawable/ic_select_title_triangle" />

            <ImageView
                android:id="@+id/iv_btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:src="@drawable/ic_select_title_triangle" />

            <ImageView
                android:id="@+id/iv_btn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_select_title_triangle" />

            <ImageView
                android:id="@+id/iv_btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_select_title_triangle" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" >

        <FrameLayout
            android:id="@+id/area_show_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>
    </FrameLayout>

</LinearLayout>